# pr-walkthrough

./: .gitignore  BACKLOG.md  LICENSE  README.md  STREAMS.md  pyproject.toml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-25T00-45-31-618Z.yml  page-2026-06-25T01-36-02-132Z.yml  page-2026-06-25T01-37-28-576Z.yml  page-2026-06-25T01-41-54-126Z.yml  page-2026-06-25T02-39-40-506Z.yml  page-2026-06-25T02-41-12-372Z.yml  page-2026-06-25T02-44-33-603Z.yml  page-2026-06-25T03-04-01-859Z.yml  page-2026-06-25T03-06-03-896Z.yml  page-2026-06-25T03-26-00-241Z.yml  page-2026-06-25T03-26-32-332Z.yml  page-2026-06-25T03-29-23-788Z.yml  page-2026-06-25T03-29-44-946Z.yml  page-2026-06-25T03-35-22-447Z.yml  page-2026-06-25T03-35-36-764Z.yml  page-2026-06-25T03-36-23-805Z.yml  page-2026-06-25T03-37-50-068Z.yml  page-2026-06-25T03-50-20-394Z.yml  page-2026-06-25T04-09-23-484Z.yml  page-2026-06-25T04-12-35-676Z.yml  page-2026-06-25T04-13-39-599Z.yml  page-2026-06-25T04-16-30-152Z.yml
backend/: pyproject.toml
backend/pr/: README.md
backend/pr_walkthrough/: __init__.py  cache.py  cli_app.py  cli_style.py  config.py  m1.py  main.py  setup_cmd.py  venv_util.py
backend/pr_walkthrough/api/: __init__.py  chunks.py  deps.py  events.py  flags.py  follow_ups.py  sessions.py
backend/pr_walkthrough/context/: README.md  __init__.py  __main__.py  cli.py  jedi_retriever.py  retriever.py
backend/pr_walkthrough/context/lsp/: __init__.py  client.py  detect.py  pool.py  retriever.py
backend/pr_walkthrough/context/tests/: test_retriever.py
backend/pr_walkthrough/context/tests/fixtures/sample_repo/sample_repo/: __init__.py  service.py  store.py
backend/pr_walkthrough/context/tests/fixtures/sample_repo/tests/: test_store.py
backend/pr_walkthrough/fakes/: __init__.py  context.py  llm.py  pr_source.py  stt.py  tts.py
backend/pr_walkthrough/llm/: README.md  STYLE_NOTES.md  __init__.py  adapter.py  anchor_pass.py  cli.py  prompts.py  tools.py
backend/pr_walkthrough/orchestration/: __init__.py  app_context.py  chunk_worker.py  event_bus.py  throttle.py
backend/pr_walkthrough/pr/: __main__.py  cli.py  diff_parser.py  gh_source.py
backend/pr_walkthrough/store/: __init__.py  session_store.py
backend/pr_walkthrough/stt/: __init__.py  __main__.py  adapter.py  audio.py  cli.py  parakeet_adapter.py
backend/pr_walkthrough/tts/: __init__.py  _wav.py  cli.py  f5_adapter.py  kokoro_adapter.py  piper_adapter.py  registry.py  say_adapter.py  text_normalize.py  xtts_adapter.py
backend/stt/: README.md
backend/tests/: conftest.py  test_cache.py  test_chunks_endpoints.py  test_cli_app.py  test_config.py  test_context_cli.py  test_e2e.py  test_llm_adapter.py  test_lsp_detect.py  test_lsp_retriever.py  test_narration_pipeline.py  test_session_store.py  test_stt_cli.py  test_throttle.py
backend/tests/pr/: test_diff_parser.py  test_gh_source.py
backend/tests/stt/: test_adapter.py
contracts/: __init__.py  adapters.py  api.md  events.py  schemas.py  validate_fixtures.py
fixtures/: README.md
fixtures/pr_small/: diff.json  follow_up_example.json  tour_plan.json
fixtures/pr_small/chunks/: c1.narration.json  c2.narration.json  c3.narration.json
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: diff-expand.spec.ts  diff-long-line.spec.ts  walkthrough.spec.ts
frontend/src/: App.module.css  App.tsx  contracts.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChunkList.module.css  ChunkList.tsx  DiffViewer.module.css  DiffViewer.tsx  FollowUpInput.module.css  FollowUpInput.tsx  NarrationPlayer.module.css  NarrationPlayer.tsx  QuestionTracker.module.css  QuestionTracker.tsx  RelatedCodeModal.module.css  RelatedCodeModal.tsx  RightRail.module.css  RightRail.tsx  SessionShell.module.css  SessionShell.tsx  SidePanel.module.css  SidePanel.tsx
frontend/src/contexts/: SessionContext.tsx
frontend/src/lib/: diffExpand.ts  exportTranscript.ts  highlight.tsx
frontend/src/mocks/: handlers.ts
frontend/src/mocks/fixtures/: c1.narration.json  c2.narration.json  c3.narration.json  flags_example.json  metadata.json
scripts/: eval_anchor_pass.py  install.sh  serve
