[project]
name = "pr-walkthrough-contracts"
version = "0.1.0"
description = "Shared contracts (schemas, adapter protocols, events) for pr-walkthrough"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*"]
