[project]
name = "pr-walkthrough-backend"
version = "0.1.0"
description = "Backend for pr-walkthrough — PR I/O stream (stream 6)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pr_walkthrough*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: requires gh auth login + GH_LIVE_TEST_PR env var (skipped in CI)",
]
